objects/ssot__OperatingHoursTimeSlot__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DayOfWeek__c</fullName>
        <label>Day Of Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndTimeText__c</fullName>
        <label>End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Operating Hours Time Slot Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursTimeSlotType__c</fullName>
        <label>Operating Hours Time Slot Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTimeText__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761227189_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OperatingHoursTimeSlot_OperatingHour_rel</label>
        <referenceTo>ssot__OperatingHours__dlm</referenceTo>
        <relationshipLabel>OperatingHoursTimeSlot_OperatingHour_rel</relationshipLabel>
        <relationshipName>rel_1697761227189_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>